[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Villagers NPC Character Pack by RgsDev/16x16 Villager female 1.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Quest/CargoQuest/King_Of_Hill_NPC.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Mini3x5.ttf" type="DynamicFontData" id=3]

[sub_resource type="RectangleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 174, 10 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 4 ]
}

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "Idle"

[sub_resource type="AnimationNodeStateMachine" id=4]
states/Idle/node = SubResource( 3 )
states/Idle/position = Vector2( 269, 214 )
start_node = "Idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=5]

[sub_resource type="DynamicFont" id=7]
size = 10
font_data = ExtResource( 3 )

[node name="King_Of_Hill_NPC" type="Node2D"]
script = ExtResource( 2 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Area2D2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -0.529755, -6.35678 )
texture = ExtResource( 1 )
vframes = 2
hframes = 8

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Idle"
anims/Idle = SubResource( 2 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 4 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 5 )

[node name="Character_dialog" type="Label" parent="."]
margin_left = -66.8379
margin_top = -24.5297
margin_right = 67.1621
margin_bottom = -10.5297
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
